cmd/objbrowse: fix scrolling/clipping of views
Apparently I need three levels of divs around the views to get space
filling, scrolling, and padding all to work together. If I try to
simplify this, then the hexview table becomes visible in the margin
*above* where its sticky header sticks.

--- a/cmd/objbrowse/web/objbrowse.css
+++ b/cmd/objbrowse/web/objbrowse.css
@@ -84,9 +84,16 @@
 }
 
 .ob-view-container > div {
-    /* Expand to the rest of the height */
+    /* Expand to the rest of the space */
     flex: 1 1 auto;
+    /* ... without overflowing it. */
+    overflow: hidden;
+}
+
+.ob-view-container > div > div {
+    height: 100%;
     overflow: scroll;
+    overflow: overlay; /* Webkit: show content under scrollbars */
 }
 
 .ob-selected {
